supabase configs for production

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,24 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/careers"
+DATABASE_URL=your_supabase_postgres_url
 
 # NextAuth
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-change-in-production
+NEXTAUTH_URL=https://yourdomain.com
+NEXTAUTH_SECRET=generate_random_secret_here
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 
 # Admin emails (comma-separated)
-ADMIN_EMAILS=admin@example.com,recruiter@example.com
+ADMIN_EMAILS=admin@yourdomain.com
+
+# Gemini API
+GEMINI_API_KEY=your_gemini_api_key
+
+# Brevo Email
+BREVO_API_KEY=your_brevo_api_key
+BREVO_SENDER_EMAIL=noreply@yourdomain.com
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
