--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/supabase-js": "^2.81.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
