--- a/package.json
+++ b/package.json
@@ -14,20 +14,32 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@icons-pack/react-simple-icons": "^13.8.0",
     "@prisma/client": "^6.19.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@shikijs/transformers": "^3.15.0",
     "@supabase/supabase-js": "^2.81.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
+    "ai": "^5.0.93",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "dotted-map": "^2.2.3",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "harden-react-markdown": "^1.1.5",
+    "katex": "^0.16.25",
     "lucide-react": "^0.553.0",
     "motion": "^12.0.0-alpha.2",
     "multer": "^2.0.2",
@@ -36,14 +48,22 @@
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "resend": "^6.4.2",
-    "tailwind-merge": "^3.4.0"
+    "shiki": "^3.15.0",
+    "tailwind-merge": "^3.4.0",
+    "use-stick-to-bottom": "^1.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
